Seperate queue for requests and dataset file change